--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,6 +73,7 @@
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="goToMain"
         android:text="@string/enter"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
