--- a/app/src/main/res/layout/activity_person_form.xml
+++ b/app/src/main/res/layout/activity_person_form.xml
@@ -214,6 +214,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginEnd="5dp"
+                android:onClick="limpiarFormulario"
                 android:text="@string/clean" />
 
             <Button
@@ -222,6 +223,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="guardarFormulario"
                 android:text="@string/save" />
         </LinearLayout>
 
