--- a/app/src/main/res/layout/activity_contact_list.xml
+++ b/app/src/main/res/layout/activity_contact_list.xml
@@ -36,7 +36,8 @@
         <ListView
             android:id="@+id/contactList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/contact_list_row"/>
 
     </LinearLayout>
 
