--- a/app/src/main/res/layout/contact_list_row.xml
+++ b/app/src/main/res/layout/contact_list_row.xml
@@ -15,7 +15,7 @@
         android:background="@drawable/border"
         android:orientation="horizontal">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ivContact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,7 +34,8 @@
                 android:id="@+id/tvContactName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 android:layout_marginTop="10dp"
                 android:text="@string/contact_example" />
 
