Consulta persona individual

--- a/app/src/main/res/layout/activity_contact_update.xml
+++ b/app/src/main/res/layout/activity_contact_update.xml
@@ -66,7 +66,7 @@
             android:layout_marginBottom="20dp"
             android:orientation="horizontal">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
